<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smartlock.eit.smartlock.RegisterActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:id="@+id/imageView"
        android:src="@drawable/lock"
        android:alpha="0.7"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32"
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="-40dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/reg_username"
        android:hint="@string/prompt_username_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/reg_emailTxt"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_email_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reg_passwordOneTxt"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_password_one_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reg_passwordTwoTxt"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_password_two_hint" />

    <EditText
        android:id="@+id/reg_phoneTxt"
        android:imeOptions="actionDone"
        android:imeActionLabel="@string/action_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_phone_hint" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/registerbtn"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
